<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gazebo_rl_env</name>
  <version>0.0.0</version>
  <description>Create the env in gazebo for RL agent training and testing.</description>
  <maintainer email="yuzhong1214@gmail.com">YuZhong-Chen</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
